Added validations and basic security. Right now, all endpoints are secured and there is no signup endpoint. So accessing the api isn't possible.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=UrlShortener
 spring.datasource.url=jdbc:postgresql://localhost:5432/urldb
-spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
